# gnu_licenseutils

./: AUTHORS  HACKING  Makefile.am  NEWS  README  TODO  bootstrap  bootstrap.conf  configure.ac  lu-sh.1  lush.1  notice.1  styles.ac
completion/: licensing
doc/: .gitignore  Makefile.am  gendocs  licenseutils.texi
po/: LINGUAS  POTFILES.in
src/: Makefile.am  agpl.c  agpl.h  all-permissive.c  all-permissive.h  apache.c  apache.h  apply.c  apply.h  boilerplate.c  boilerplate.h  bsd.c  bsd.h  c++-style.c  c++-style.h  c-style.c  c-style.h  cbb.c  cbb.h  choose.c  choose.h  comment-style.h  comment.c  comment.h  copyright.c  copyright.h  detect.c  detect.h  extra.c  extra.h  fdl.c  fdl.h  forget.c  forget.h  fortran-style.c  fortran-style.h  fsf-addresses.c  fsf-addresses.h  gettext-more.h  gettext-style.c  (+65 more)
tests/: Makefile.am
tests/boilerplate/: 0001  0002  0003  0004  Makefile.am
tests/cbb/: 0001  Makefile.am
tests/choose/: 0001  0002  Makefile.am
tests/comment/: 0001  Makefile.am
tests/copyright/: 0001  Makefile.am
tests/extra/: 0001  Makefile.am
tests/png-apply/: 0001  Makefile.am
tests/prepend/: 0001  Makefile.am
tests/preview/: 0001  Makefile.am
tests/project/: 0001  Makefile.am
tests/top/: 0001  Makefile.am
tests/uncomment/: 0001  0002  0003  0004  Makefile.am
