# Copyright (C) 2013 Ben Asselstine
# 
# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved.  This file is offered as-is,
# without any warranty.
AM_COLOR_TESTS=no
AM_TESTS_ENVIRONMENT=export licensing=${top_builddir}/src/licensing; \
		     export builddir=${builddir};

png_apply_tests=0001
TESTS=${png_apply_tests}
check_SCRIPTS=${png_apply_tests}

EXTRA_DIST=${png_apply_tests} 0001.png 0001-expected-result.png
